--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -212,6 +212,29 @@ section{
 }
 /* SECTION *//* SECTION *//* SECTION */
 
+/* PAGINATION *//* PAGINATION *//* PAGINATION *//* PAGINATION */
+#pages {
+  display: inline-block;
+}
+
+#pages a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+#pages a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+#pages a:hover:not(.active) {background-color: #a833ff;}
+#pagination{
+  display: flex;
+  justify-content: center;
+}
+/* PAGINATION *//* PAGINATION *//* PAGINATION */
+
 /* FOOTER *//* FOOTER *//* FOOTER *//* FOOTER */
 footer{
   background-color: rgba(63, 81, 181, 0.4);
@@ -244,17 +267,17 @@ footer{
     font-size: 2.3em;
   }
   div#slider { overflow: hidden; margin: 0 auto; max-width: 100%;
- }
- .menu
-{
+  }
+  .menu
+  {
   width: 80%;
-}
-img{
+  }
+  img{
   width: 90%;
   height: 90%;
-}
-.menu .burger
-{
+  }
+  .menu .burger
+  {
   appearance:none;
   -moz-appearance:none;
   -webkit-appearance:none;
@@ -269,7 +292,20 @@ img{
   text-align:center;
   top:0;
   width:50px;
-
+  }
 }
+/* MEDIA QUERIES *//* MEDIA QUERIES *//* MEDIA QUERIES */
 
+/* INSCRIPTION *//* INSCRIPTION *//* INSCRIPTION */
+form{
+  
+}
+#inscription{
+  margin-top: 50px;
+  min-height: 518px;
+  max-height: 1080px;
+}
+#footer2{
+  bottom: 0;
+  width: 100%;
 }
