--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -24,7 +24,7 @@ a:hover{
   color: #c3c3c3;
   text-decoration: none;
 }
-/* Général *//* Général *//* Général */
+/* FIN Général *//* FIN Général *//* FIN Général */
 
 /* MENU DE NAVIGATION *//* MENU DE NAVIGATION *//* MENU DE NAVIGATION *//* MENU DE NAVIGATION */
 header{
@@ -132,7 +132,7 @@ p
 {
   padding:5px 15px ;
 }
-/** MENU DE NAVIGATION **//** MENU DE NAVIGATION **//** MENU DE NAVIGATION **/
+/** FIN MENU DE NAVIGATION **//** FIN MENU DE NAVIGATION **//** FIN MENU DE NAVIGATION **/
 
 /* Bannière *//* Bannière *//* Bannière *//* Bannière */
 #textbanner{
@@ -192,7 +192,7 @@ div#slider figure {
   -webkit-animation: 30s slidy infinite;
           animation: 30s slidy infinite;
 }
-/* Bannière *//* Bannière *//* Bannière */
+/* FIN Bannière *//* FIN Bannière *//* FIN Bannière */
 
 /* SECTION *//* SECTION *//* SECTION *//* SECTION */
 article > h2{
@@ -236,7 +236,7 @@ section{
           justify-content: flex-end;
   padding-right: 12px;
 }
-/* SECTION *//* SECTION *//* SECTION */
+/* FIN SECTION *//* FIN SECTION *//* FIN SECTION */
 
 /* PAGINATION *//* PAGINATION *//* PAGINATION *//* PAGINATION */
 #pages {
@@ -263,7 +263,7 @@ section{
       -ms-flex-pack: center;
           justify-content: center;
 }
-/* PAGINATION *//* PAGINATION *//* PAGINATION */
+/* FIN PAGINATION *//* FIN PAGINATION *//* FIN PAGINATION */
 
 /* FOOTER *//* FOOTER *//* FOOTER *//* FOOTER */
 footer{
@@ -287,7 +287,7 @@ footer{
 #textfooter{
   
 }
-/* FOOTER *//* FOOTER *//* FOOTER */
+/* FIN FOOTER *//* FIN FOOTER *//* FIN FOOTER */
 
 /* MEDIA QUERIES *//* MEDIA QUERIES *//* MEDIA QUERIES *//* MEDIA QUERIES */
 @media (min-width:1000px)  {
@@ -404,7 +404,7 @@ footer{
   position: relative;
 }
 }
-/* MEDIA QUERIES *//* MEDIA QUERIES *//* MEDIA QUERIES */
+/* FIN MEDIA QUERIES *//* FIN MEDIA QUERIES *//* FIN MEDIA QUERIES */
 
 /* INSCRIPTION *//* INSCRIPTION *//* INSCRIPTION *//* INSCRIPTION */
 form{
@@ -429,7 +429,7 @@ form{
           justify-content: center;
   padding-bottom: 15px;
 }
-/* INSCRIPTION *//* INSCRIPTION *//* INSCRIPTION */
+/* FIN INSCRIPTION *//* FIN INSCRIPTION *//* FIN INSCRIPTION */
 
 /* CONTACT *//* CONTACT *//* CONTACT *//* CONTACT */
 #logocontact{
@@ -439,7 +439,37 @@ form{
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
-/* CONTACT *//* CONTACT *//* CONTACT */
+/* FIN CONTACT *//* FIN CONTACT *//* FIN CONTACT */
 .row{
   margin-right: 0;
+}
+
+/* COMMENTAIRE *//* COMMENTAIRE *//* COMMENTAIRE */
+div > #imgcomm{
+  border-radius: 50%;
+  height: 20%;
+  width: 20%;
+}
+#sectionCom{
+  border-top: 3px solid #3f51b5;
+  padding-left: 15px;
+  padding-bottom: 20px;
+}
+section > #nbcom{
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-family: 'Lato';
+  font-size: 26px;
+}
+.containercom{
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border-top: 3px solid #c3c3c3;
+  border-radius: 20% 0 0 0;
+}
+#com{
+  background-color: #3f51b5;
+  color: white;
+  width: 100%;
 }
