--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -14,7 +14,6 @@ body
           box-sizing: border-box;
   width: 100%;
 }
-
 a
 {
   color:#fff;
@@ -67,9 +66,9 @@ header{
   height:0;
   overflow:hidden;
   text-transform:uppercase;
-  -webkit-transition:height .2s;
-  -o-transition:height .2s;
-  transition:height .2s;
+  -webkit-transition:height .8s;
+  -o-transition:height .8s;
+  transition:height .8s;
   text-align: center;
 }
 
@@ -125,7 +124,7 @@ header{
 .menu .burger:checked + nav
 {
   height:calc(100vh - 50px);
-  z-index: 4;
+  z-index: 1;
   position: relative;
 }
 p
@@ -135,10 +134,11 @@ p
 /** FIN MENU DE NAVIGATION **//** FIN MENU DE NAVIGATION **//** FIN MENU DE NAVIGATION **/
 
 /* Bannière *//* Bannière *//* Bannière *//* Bannière */
-#textbanner{
-  font-size: 220%;
+div#slider #textbanner{
+  font-size: 150%;
   position: relative;
-  bottom: -110px;
+  top: 10vh;
+  margin: 0 auto;
   font-weight:bold;
   text-transform: uppercase;
   font-family: 'Lato';
@@ -146,7 +146,7 @@ p
   z-index: 1;
   text-shadow: 2px 2px 2px white;
 }
-div#slider { width: 100%; max-width: 1000px; overflow: hidden;text-align: center;
+div#slider { width: 100%; max-width: 1000px; overflow: hidden;text-align: center;margin-top: 5px;
  }
 
 div#slider figure {
@@ -156,7 +156,7 @@ div#slider figure {
   font-size: 0;
   text-align: center;
 }
-div#slider figure img { width: 20%; height: auto; padding-top: 15px;}
+div#slider figure img { width: 20%; height: auto;}
 
 @-webkit-keyframes slidy {
   0% { left: 0%; }
@@ -201,12 +201,14 @@ article > h2{
   font-family: 'Lato';
   font-size: 22px;
   text-align: center;
+  font-weight: bold;
 }
 article{
   padding-top: 50px;
   padding-bottom: 35px;
   background-color: rgba(63, 81, 181, 0.3);
   width: 100%;
+  border-bottom: 2px solid black;
 }
 img{
   width: 95%;
@@ -235,6 +237,22 @@ section{
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding-right: 12px;
+}
+.date{
+  margin-top: 10px;
+  font-size: 2vh;
+  font-family: 'Lato';
+}
+.descart{
+  font-size: 2.4vh;
+}
+h3{
+  color: #3f51b5;
+  text-shadow: 2px 2px 2px white ;
+  font-family: 'Lato';
+  font-size: 22px;
+  text-align: center;
+  font-weight: bold;
 }
 /* FIN SECTION *//* FIN SECTION *//* FIN SECTION */
 
@@ -269,6 +287,8 @@ section{
 footer{
   background-color: rgba(63, 81, 181, 0.4);
   position: relative;
+  display: flex;
+  justify-content: space-between;
   bottom: 0;
   width: 100%;
   margin:0 !important;
@@ -280,12 +300,14 @@ footer{
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -ms-flex-item-align: center;
+      align-items: center;
       align-self: center;
   width: 30%;
   height: 30%;
 }
-#textfooter{
-  
+p#textfooter{
+  align-self: center;
+  color: #696969;
 }
 /* FIN FOOTER *//* FIN FOOTER *//* FIN FOOTER */
 
@@ -407,9 +429,7 @@ footer{
 /* FIN MEDIA QUERIES *//* FIN MEDIA QUERIES *//* FIN MEDIA QUERIES */
 
 /* INSCRIPTION *//* INSCRIPTION *//* INSCRIPTION *//* INSCRIPTION */
-form{
-  
-}
+
 #inscription{
   margin-top: 50px;
   min-height: 518px;
@@ -508,4 +528,47 @@ section > #nbcom{
 #boutonCom:hover{
   color: rgba(63, 81, 181, 1);
   background-color: grey;
+}
+div.boutonsuite{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 20px;
+}
+div.boutonsuite > button{
+  height: 30px;
+  width: 100px;
+  margin-top: 35px;
+  font-family: 'Lato';
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 20px; 
+  border: none;
+  background-image: linear-gradient(white,rgba(63, 81, 181, 0.4)); 
+}
+div.boutonsuite button > a{
+  color: black;
+}
+div.boutonsuite button > a:hover{
+  color: rgba(63, 81, 181, 1);
+  
+}
+div.boutonsuite button > a:active{
+  color: rgba(63, 81, 181, 1);
+}
+div.boutonsuite > button:hover{
+  background-color: grey;
+}
+div.boutonsuite > button:active{
+  background-color: grey;
+}
+div.iconcom{
+  align-self: flex-end;
+  margin-left: 20px;
+  border: 2px solid grey;
+  border-radius: 20px;
+  padding: 5px;
+}
+div.iconcom > a{
+  color: black;
+  font-weight: bold;
 }
